crates/toml_edit/tests/snapshots/invalid/table/super-twice.stderr
TOML parse error at line 3, column 2
  |
3 | [a]
  |  ^
duplicate key
